modules/gdscript/tests/scripts/runtime/errors/op_by_zero/modulo_by_zero_int.gd
func test():
	var integer = 1
	integer %= 0
